# libbtf

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  _r_e_a_d_m_e_8md.html  annotated.html  btf_8h.html  btf_8h_source.html  btf__c__type_8h.html  btf__c__type_8h_source.html  btf__json_8cpp.html  btf__json_8h.html  btf__json_8h_source.html  btf__map_8cpp.html  btf__map_8h.html  btf__map_8h_source.html  btf__parse_8cpp.html  btf__parse_8h.html  btf__parse_8h_source.html  btf__type__data_8cpp.html  btf__type__data_8h.html  btf__type__data_8h_source.html  btf__write_8cpp.html  btf__write_8h.html  btf__write_8h_source.html  classes.html  classlibbtf_1_1btf__type__data.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_eval.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  (+50 more)
.github/: dependabot.yml
.github/workflow/: Build.yml  CICD.yml
.github/workflows/: Build.yml  CICD.yml  Fuzzer.yml  codeql.yml  docs.yml  scorecards.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
_codeql_build_dir/libbtf/: Makefile  cmake_install.cmake
cmake/: options.cmake  platform.cmake  version.cmake
dump/: CMakeLists.txt  btf_dump.cpp  options.h
libbtf/: CMakeLists.txt  btf.h  btf_c_type.h  btf_json.cpp  btf_json.h  btf_map.cpp  btf_map.h  btf_parse.cpp  btf_parse.h  btf_type_data.cpp  btf_type_data.h  btf_write.cpp  cycle_detector.h
libfuzzer/: CMakeLists.txt  libfuzz_harness.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+21 more)
src/: CMakeLists.txt  btf.h  btf_json.h  btf_map.cpp  btf_parse.cpp  btf_type_data.cpp  btf_type_data.h  btf_write.cpp  btf_write.h
test/: CMakeLists.txt  test.cpp  test_cycle_detector.cpp
test/expected/: badhelpercall.h  badmapptr.h  badrelo.h  byteswap.h  ctxoffset.h  exposeptr.h  exposeptr2.h  loop.h  map_in_map.h  map_in_map_anonymous.h  mapoverflow.h  mapunderflow.h  mapvalue-overrun.h  nullmapref.h  packet_access.h  packet_overflow.h  packet_reallocate.h  packet_start_ok.h  ringbuf_uninit.h  stackok.h  tail_call.h  tail_call_bad.h  twomaps.h  twomaps_btf.h  twostackvars.h  twotypes.h  wronghelper.h
